--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -71,10 +71,30 @@
                     </Flyout>
                 </AppBarButton.Flyout>
             </AppBarButton>
+
+            <AppBarButton Icon="Setting"  Label="Settings">
+                <AppBarButton.Flyout>
+                    <Flyout>
+                        <Flyout.FlyoutPresenterStyle>
+                            <Style TargetType="FlyoutPresenter">
+                                <Setter Property="Padding" Value="5"/>
+                                <Setter Property="Margin" Value="0 -5 0 0"/>
+                                <Setter Property="BorderBrush" Value="Black"/>
+                                <Setter Property="BorderThickness" Value="2"/>
+                            </Style>
+                        </Flyout.FlyoutPresenterStyle>
+                        <StackPanel Orientation="Vertical">
+                            <MenuFlyoutItem x:Name="connectBtn" Text="Connect" HorizontalContentAlignment="Center" Click="connectBtn_Click"></MenuFlyoutItem>
+                            <MenuFlyoutSeparator/>
+                            <MenuFlyoutItem x:Name="disconnectBtn" Text="Disconnect" HorizontalContentAlignment="Center" Click="disconnectBtn_Click"></MenuFlyoutItem>
+                        </StackPanel>
+                    </Flyout>
+                </AppBarButton.Flyout>
+            </AppBarButton>
         </CommandBar>
 
         <!-- Collapse Side Bar Button -->
-        <AppBarButton x:Name="collapseSideBarBtn" Icon="More" Click="collapseSideBarBtn_Click"/>
+        <AppBarButton x:Name="collapseSideBarBtn" Icon="Back"  Click="collapseSideBarBtn_Click"/>
 
         <!-- Canvas -->
         <ScrollViewer Grid.Row="1" Grid.ColumnSpan="2" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible">
