--- a/WelcomePage.xaml
+++ b/WelcomePage.xaml
@@ -23,10 +23,12 @@
         </Grid.RowDefinitions>
 
         <TextBlock Text="Better Together Paint"
+                   FontFamily="Assets/Fonts/PermanentMarker-Regular.ttf#Permanent Marker"
                    FontSize="42"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    FontStyle="Italic"
+                   Padding="0 0 20 0"
                    IsColorFontEnabled="True" 
                    Margin="0 0 0 20"/>
 
