--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -48,25 +48,7 @@
             </AppBarButton>
 
             <!-- Edit Button -->
-            <AppBarButton Icon="Edit"  Label="Edit">
-                <AppBarButton.Flyout>
-                    <Flyout>
-                        <Flyout.FlyoutPresenterStyle>
-                            <Style TargetType="FlyoutPresenter">
-                                <Setter Property="Padding" Value="5"/>
-                                <Setter Property="Margin" Value="0 -5 0 0"/>
-                                <Setter Property="BorderBrush" Value="Black"/>
-                                <Setter Property="BorderThickness" Value="2"/>
-                            </Style>
-                        </Flyout.FlyoutPresenterStyle>
-                        <StackPanel Orientation="Vertical">
-                            <MenuFlyoutItem x:Name="resizeBtn" Text="Resize" HorizontalContentAlignment="Center" Click="resizeBtn_Click"></MenuFlyoutItem>
-                            <MenuFlyoutSeparator x:Name="editSep1"/>
-                            <MenuFlyoutItem x:Name="clearBtn" Text="Clear" HorizontalContentAlignment="Center" Click="clearBtn_Click" Foreground="Red"></MenuFlyoutItem>
-                        </StackPanel>
-                    </Flyout>
-                </AppBarButton.Flyout>
-            </AppBarButton>
+            <AppBarButton x:Name="clearBtn" Icon="Clear" Label="Clear" Foreground="Red" Click="clearBtn_Click" />
 
             <!-- Connection Buttons -->
             <AppBarButton x:Name="connectBtn" Icon="AddFriend"  Label="Connect" HorizontalContentAlignment="Center" Click="connectBtn_Click"></AppBarButton>
