Clear and collapse side bar hotkeys

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -46,7 +46,7 @@
                             <MenuFlyoutItem x:Name="exitBtn" Text="Exit" HorizontalContentAlignment="Center" Click="exitBtn_Click" Foreground="Red">
                                 <MenuFlyoutItem.KeyboardAccelerators>
                                     <KeyboardAccelerator Key="Escape"
-                                     Modifiers="None"/>
+                                                         Modifiers="None"/>
                                 </MenuFlyoutItem.KeyboardAccelerators>
                             </MenuFlyoutItem>
                         </StackPanel>
@@ -55,7 +55,12 @@
             </AppBarButton>
 
             <!-- Edit Button -->
-            <AppBarButton x:Name="clearBtn" Icon="Clear" Label="Clear" Foreground="Red" Click="clearBtn_Click" />
+            <AppBarButton x:Name="clearBtn" Icon="Clear" Label="Clear" Foreground="Red" Click="clearBtn_Click">
+                <AppBarButton.KeyboardAccelerators>
+                    <KeyboardAccelerator Key="Delete"
+                                         Modifiers="Control"/>
+                </AppBarButton.KeyboardAccelerators>
+            </AppBarButton>
 
             <!-- Connection Buttons -->
             <AppBarButton x:Name="connectBtn" Icon="AddFriend"  Label="Connect" HorizontalContentAlignment="Center" Click="connectBtn_Click"></AppBarButton>
@@ -63,7 +68,12 @@
         </CommandBar>
 
         <!-- Collapse Side Bar Button -->
-        <AppBarButton x:Name="collapseSideBarBtn" Icon="Back"  Click="collapseSideBarBtn_Click"/>
+        <AppBarButton x:Name="collapseSideBarBtn" Icon="Back"  Click="collapseSideBarBtn_Click">
+            <AppBarButton.KeyboardAccelerators>
+                <KeyboardAccelerator Key="Q"
+                                 Modifiers="None"/>
+            </AppBarButton.KeyboardAccelerators>
+        </AppBarButton>
 
         <!-- Canvas -->
         <ScrollViewer Grid.Row="1" Grid.ColumnSpan="2" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible">
