--- a/UserControls/Host.xaml
+++ b/UserControls/Host.xaml
@@ -7,7 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400" 
+    Background="DarkGray">
 
     <ContentDialog.Resources>
         <Style TargetType="Button">
@@ -19,7 +20,7 @@
         </Style>
     </ContentDialog.Resources>
     
-    <Grid Background="DarkGray">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="2*"/>
             <RowDefinition/>
