--- a/App.xaml
+++ b/App.xaml
@@ -4,4 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BTPaint">
 
+    <Application.Resources>
+        <x:Double x:Key="ContentDialogMaxWidth">1200</x:Double>
+        <x:Double x:Key="ContentDialogMaxHeight">800</x:Double>
+    </Application.Resources>
+
 </Application>
+    
+    
